# drone-tracking

color-tracking-demo/: color-tracking-demo.cpp
drone-control-cpp/: CMakeLists.txt  README.md
drone-control-cpp/cmake/Modules/: FindFBX.cmake  FindNatNet.cmake
drone-control-cpp/src/: OptiTrackDataCollector.cpp  OptiTrackDataCollector.h  calculator.cpp  calculator.h  command.cpp  command.h  dataAquisitionController.cpp  dataAquisitionController.h  dataCollector.h  dataMerger.cpp  dataMerger.h  drone-control.cpp  drone.cpp  drone.h  droneCollection.cpp  droneCollection.h  droneCommander.cpp  droneCommander.h  droneManager.cpp  droneManager.h  position.cpp  position.h  referenceDataCollector.cpp  referenceDataCollector.h  sample.cpp  sample.h  synchronizedComponent.h  synchronizer.cpp  synchronizer.h
